@@ -1,4 +1,4 @@
-2026-01-08 GarlicDude <https://www.github.com/thatgarlicdude>
+2026-01-09 GarlicDude <https://www.github.com/thatgarlicdude>
 
 	PacIO Version 1.6.0-alpha
 	* Added the docs directory.
@@ -13,6 +13,10 @@
 	* Updated PacIO.java.
 		* The Javadoc now uses paragraphs.
 		* Compacted the code.
+	* Updated Loadable.java.
+		* The Javadoc now uses paragraphs.
+	* Updated Savable.java.
+		* The Javadoc now uses paragraphs.
 
 2026-01-01 GarlicDude <https://www.github.com/thatgarlicdude>
 
